# labdata_fqm

./: .gitignore  CLAUDE.md  README.md  app.py  codecov.yml  config.toml  generate_synthetic_data.py  main.py  mypy.ini  pyproject.toml  requirements.txt  ruff.toml  test_longitudinal_data.py  test_rockland_feature.py  utils.py
.github/: dependabot.yml
.github/workflows/: ci.yml
data.old/: data_backup
pages/: 02_📊_Data_Profiling.py  profiling.py  query.py
test_longitudinal/: cognitive.csv  demographics.csv  flanker.csv
test_rockland_data/: demographics.csv  task_performance.csv  test_task.csv
tests/: test_config.py  test_core.py  test_data_processing.py  test_file_upload.py  test_integration.py  test_sql_generation.py
tests/fixtures/cross_sectional/: cognitive.csv  demographics.csv
tests/fixtures/longitudinal/: cognitive.csv  demographics.csv
tests/fixtures/rockland/: demographics.csv
