[project]
name = "tbs_data_fqm"
version = "0.1.0"
description = "Basic project to filter, query, merge across CSV files."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "duckdb>=1.3.0",
    "jupyterlab>=4.4.3",
    "pandas>=2.3.0",
    "streamlit>=1.45.1",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
]

[dependency-groups]
test = [
    "pytest>=8.4.0",
    "pytest-cov>=6.1.1",
]
dev = [
    "pytest>=8.4.0",
    "pytest-cov>=6.1.1",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "bandit>=1.7.0",
    "safety>=2.0.0",
]
